<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_gravity="bottom" android:id="@id/dialpad" android:background="@drawable/pic_tools_button_panel_bg_yep" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="300.0dip" android:layout_marginTop="@dimen/dialpad_vertical_margin" android:layout_weight="@integer/dialpad_layout_weight_dialpad" android:layoutDirection="ltr" android:paddingStart="5.0dip" android:paddingEnd="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow android:layout_height="0.0dip" android:layout_weight="1.0">
        <ImageButton android:id="@id/one" android:src="@drawable/dial_num_1_yep" android:contentDescription="@string/description_image_button_one" style="@style/DialpadButtonStyle" />
        <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <ImageButton android:id="@id/two" android:src="@drawable/dial_num_2_yep" android:contentDescription="@string/description_image_button_two" style="@style/DialpadButtonStyle" />
        <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <ImageButton android:id="@id/three" android:src="@drawable/dial_num_3_yep" android:contentDescription="@string/description_image_button_three" style="@style/DialpadButtonStyle" />
    </TableRow>
    <ImageView android:background="@drawable/pic_horizontal_divider_yep" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TableRow android:layout_height="0.0dip" android:layout_weight="1.0">
        <ImageButton android:id="@id/four" android:src="@drawable/dial_num_4_yep" android:contentDescription="@string/description_image_button_four" style="@style/DialpadButtonStyle" />
        <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <ImageButton android:id="@id/five" android:src="@drawable/dial_num_5_yep" android:contentDescription="@string/description_image_button_five" style="@style/DialpadButtonStyle" />
        <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <ImageButton android:id="@id/six" android:src="@drawable/dial_num_6_yep" android:contentDescription="@string/description_image_button_six" style="@style/DialpadButtonStyle" />
    </TableRow>
    <ImageView android:background="@drawable/pic_horizontal_divider_yep" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TableRow android:layout_height="0.0dip" android:layout_weight="1.0">
        <ImageButton android:id="@id/seven" android:src="@drawable/dial_num_7_yep" android:contentDescription="@string/description_image_button_seven" style="@style/DialpadButtonStyle" />
        <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <ImageButton android:id="@id/eight" android:src="@drawable/dial_num_8_yep" android:contentDescription="@string/description_image_button_eight" style="@style/DialpadButtonStyle" />
        <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <ImageButton android:id="@id/nine" android:src="@drawable/dial_num_9_yep" android:contentDescription="@string/description_image_button_nine" style="@style/DialpadButtonStyle" />
    </TableRow>
    <ImageView android:background="@drawable/pic_horizontal_divider_yep" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TableRow android:layout_height="0.0dip" android:layout_weight="1.0">
        <ImageButton android:id="@id/star" android:src="@drawable/dial_num_star_yep" android:contentDescription="@string/description_image_button_star" style="@style/DialpadButtonStyle" />
        <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <ImageButton android:id="@id/zero" android:src="@drawable/dial_num_0_yep" android:contentDescription="@string/description_image_button_zero" style="@style/DialpadButtonStyle" />
        <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <ImageButton android:id="@id/pound" android:src="@drawable/dial_num_pound_yep" android:contentDescription="@string/description_image_button_pound" style="@style/DialpadButtonStyle" />
    </TableRow>
</TableLayout>