<?xml version="1.0" encoding="utf-8"?>
<com.android.phone.MSimInCallTouchUi android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:prvandroid="http://schemas.android.com/apk/prv/res/android">
    <RelativeLayout android:id="@id/inCallControls" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ViewStub android:id="@id/dtmf_twelve_key_dialer_stub" android:layout="@layout/dtmf_twelve_key_dialer_view_yep" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dialpad_vertical_margin" android:layout_above="@id/bottomButtons" />
        <LinearLayout android:orientation="vertical" android:id="@id/bottomButtons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <LinearLayout android:orientation="horizontal" android:id="@id/inCallToolPanel" android:background="@drawable/pic_tools_button_panel_bg_yep" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textSize="14.0sp" android:layout_gravity="center" android:id="@id/contactsButton" android:background="@drawable/btn_compound_contacts_yep" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/onscreenContactsText_yep" android:drawableTop="@drawable/ic_contacts_yep" android:layout_weight="1.0" />
                <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
                <ToggleButton android:layout_gravity="center" android:id="@id/muteButton" android:background="@drawable/btn_compound_mute_yep" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:textOn="@string/onscreenMuteText_yep" android:textOff="@string/onscreenMuteText_yep" android:drawableTop="@drawable/ic_mute_yep" android:layout_weight="1.0" />
                <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
                <ToggleButton android:layout_gravity="center" android:id="@id/holdButton" android:background="@drawable/btn_compound_mute_yep" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:textOn="@string/onscreenHoldText_yep" android:textOff="@string/onscreenHoldText_yep" android:drawableTop="@drawable/ic_hold_yep" android:layout_weight="1.0" />
                <Button android:textSize="14.0sp" android:layout_gravity="center" android:id="@id/swapButton" android:background="@drawable/btn_compound_swap_call_yep" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/onscreenSwapCallText_yep" android:drawableTop="@drawable/ic_swap_call_yep" android:layout_weight="1.0" />
                <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
                <Button android:textSize="14.0sp" android:layout_gravity="center" android:id="@id/addButton" android:background="@drawable/btn_compound_add_call_yep" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/onscreenAddCallText_yep" android:drawableTop="@drawable/ic_add_call_yep" android:layout_weight="1.0" />
                <Button android:textSize="14.0sp" android:layout_gravity="center" android:id="@id/mergeButton" android:background="@drawable/btn_compound_merge_call_yep" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/onscreenMergeCallText_yep" android:drawableTop="@drawable/ic_merge_call_yep" android:layout_weight="1.0" />
                <ImageView android:background="@drawable/pic_vertical_divider_yep" android:layout_width="wrap_content" android:layout_height="fill_parent" />
                <ToggleButton android:layout_gravity="center" android:id="@id/callRecordButton" android:background="@drawable/btn_compound_call_recorder_yep" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:textOn="@string/onscreenCallRecordText_yep" android:textOff="@string/onscreenCallRecordText_yep" android:drawableTop="@drawable/ic_call_recorder_yep" android:layout_weight="1.0" />
            </LinearLayout>
            <ImageView android:background="@drawable/ic_bottom_dividing_line_yep" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <LinearLayout android:orientation="horizontal" android:id="@id/mainButtons" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <ToggleButton android:id="@id/audioButton" android:background="@drawable/btn_compound_audio_yep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@null" android:textOff="@null" android:layout_weight="1.0" />
                <ToggleButton android:id="@id/dialpadButton" android:background="@drawable/btn_compound_dialpad_yep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@null" android:textOff="@null" android:layout_weight="1.0" />
                <ToggleButton android:id="@id/toolsButton" android:background="@drawable/btn_compound_tools_yep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@null" android:textOff="@null" android:layout_weight="1.0" />
            </LinearLayout>
            <ImageButton android:layout_gravity="center" android:id="@id/endButton" android:background="@drawable/end_call_background_yep" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip" android:src="@drawable/ic_dial_end_call_yep" android:layout_weight="1.0" />
        </LinearLayout>
    </RelativeLayout>
    <com.android.internal.widget.multiwaveview.GlowPadView android:gravity="bottom" android:layout_gravity="bottom|center" android:id="@id/incomingCallWidget" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="-110.0dip" prvandroid:innerRadius="@android:dimen/glowpadview_inner_radius" prvandroid:targetDescriptions="@array/incoming_call_widget_3way_target_descriptions" prvandroid:directionDescriptions="@array/incoming_call_widget_3way_direction_descriptions" prvandroid:pointDrawable="@null" prvandroid:glowRadius="@android:dimen/glowpadview_glow_radius" prvandroid:targetDrawables="@array/incoming_call_widget_3way_targets_yep" prvandroid:handleDrawable="@drawable/ic_in_call_touch_handle_yep" prvandroid:outerRadius="@android:dimen/glowpadview_target_placement_radius" prvandroid:vibrationDuration="20" prvandroid:snapMargin="@android:dimen/glowpadview_snap_margin" prvandroid:feedbackCount="1" />
</com.android.phone.MSimInCallTouchUi>